# qwen3-tts-clone

./: .gitignore  .gui_settings.json  Makefile  README.md  config.py  pyproject.toml  run-gui.ps1  run-gui.sh  setup.ps1  setup.sh
assets/: china-is-going-to-eat-our-lunch-come-on-man-they-can-t-even-figure-out-how-to-deal-with-the-fact-that-they-have-this-gre.spk.pt  personalities.json
scripts/: fetch_personalities.py  hybrid_fast.py  hybrid_instruct.py  prep_audio.py  test_icl.py  transcribe.py
src/: clone_voice.py  gui.py  gui_tk.py  personalities.py  pipeline.py  virtual_mic.py
src/helpers/: __init__.py
tests/: conftest.py
